tests/fixtures/invalid/none_sub_bytes.py
# Cannot subtract None and Bytes
x: None = None - b"hello"
